# src/modules/acl/user_group/user_group.controller.ts
@@ -1,97 +1,0 @@
-import {
-    Controller,
-    Get,
-    Post,
-    Body,
-    Param,
-    Put,
-    Delete,
-    Query,
-} from '@nestjs/common';
-import { UserGroupService } from './user_group.service'; 
-import { BaseRequestPipe } from 'src/common/pipes/base-request.pipe';
-import { ApiResponseHelper } from 'src/common/helpers/response.helper'; 
-import { ApiTags, ApiBody } from '@nestjs/swagger';
-import { AutoSwaggerQuery } from 'src/common/decorators/auto-swagger-query.decorator';
-import { BaseQueryDto } from 'src/common/dto/base-query.dto';
-
-import { AclUserGroupDto } from 'src/dto/acl/acl.user_group.dto';; 
-import { ApiResponseEntity } from 'src/common/decorators/api-response-entity';
-  
-@ApiTags('user_group')
-@Controller('user_group')
-export class UserGroupController {
-    constructor(private readonly service: UserGroupService) { }
-
-    @Get()
-    @ApiResponseEntity(AclUserGroupDto, 'list')
-    @AutoSwaggerQuery()
-    async findAll(@Query() query: BaseQueryDto) {
-        const parsed = {
-            pageIndex: parseInt(String(query.pageIndex ?? '1'), 10),
-            pageSize: parseInt(String(query.pageSize ?? '1000'), 10),
-            filter: query.filter ? JSON.parse(query.filter) : {},
-            sortKey: query.sortKey,
-            sortValue: query.sortValue,
-            search_field: query.search_field ?? [],
-            search_keyword: query.search_keyword ?? '',
-        };
-
-        try {
-            const result = await this.service.findAll(parsed);
-            return ApiResponseHelper.success(result.data, 'list', undefined, result.total);
-        } catch (error) {
-            return ApiResponseHelper.failed(null, 'Gagal mengambil data', 500, error);
-        }
-    }
-
-    @Get(':id')
-    @ApiResponseEntity(AclUserGroupDto, 'get')
-    async findOne(@Param('id') id: string) {
-        try {
-            const result = await this.service.findOne(id);
-            if (!result) {
-                
-                return ApiResponseHelper.failed(null, 'Data tidak ditemukan', 404);
-            }
-            return ApiResponseHelper.success(result, 'get');
-        } catch (error) {
-            return ApiResponseHelper.failed(null, 'Terjadi kesalahan', 500, error);
-        }
-    }
-
-    @Post()
-    @ApiBody({ type: AclUserGroupDto }) 
-    @ApiResponseEntity(AclUserGroupDto, 'post')
-    async create(@Body() body: AclUserGroupDto) {
-        try {
-            const result = await this.service.create(body);
-            return ApiResponseHelper.success(result, 'create');
-        } catch (error) {
-            return ApiResponseHelper.failed(null, 'Gagal menambahkan data', 500, error);
-        }
-    }
-
-    @Put(':id')
-    @ApiBody({ type: AclUserGroupDto })
-    @ApiResponseEntity(AclUserGroupDto, 'put')
-    async update(@Param('id') id: string, @Body() body: AclUserGroupDto) {
-        try {
-            const result = await this.service.update(id, body);
-            return ApiResponseHelper.success(result, 'update');
-        } catch (error) {
-            return ApiResponseHelper.failed(null, 'Gagal memperbarui data', 500, error);
-        }
-    }
-
-    @Delete(':id')
-    @ApiResponseEntity(AclUserGroupDto, 'delete')
-    async remove(@Param('id') id: string) {
-        try {
-            const result = await this.service.remove(id);
-            return ApiResponseHelper.success(result, 'delete');
-        } catch (error) {
-            return ApiResponseHelper.failed(null, 'Gagal menghapus data', 500, error);
-        }
-    }
-}
